--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
 
     <div class="main">
         <div class="section" id="home">
-            <div class="container">Home</div>
+            <div class="container">Mahib</div>
         </div>
         <div class="section" id="about_me">
             <div class="container">About me</div>
