Home Grid Added

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     <div class="sidebar" id="sidebar">
@@ -46,7 +47,28 @@
 
     <div class="main">
         <div class="section" id="home">
-            <div class="container">Mahib</div>
+            <div class="container">
+              <div class="home">
+                <div class="home1">
+                  <h2>Welcome to My world!</h2>
+                </div>
+
+                <div class="home2">
+                  <h4>I'm the second grid Div!</h4>
+                </div>
+
+                <div class="home3">
+                  <h4>I'm the 3rd!</h4> 
+                </div>
+
+                <div class="home4">
+                  <h4>4th here!</h4>
+                </div>
+
+              </div>
+
+            </div>
+
         </div>
         <div class="section" id="about_me">
             <div class="container">About me</div>
