--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/anibg.css">
     <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
+    <div class="stars">
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+  </div>
+
     <div class="sidebar" id="sidebar">
       <script src="js/sidebar.js"></script>
         <button class="close-btn" id="closeButton">&times;</button>
@@ -49,8 +103,16 @@
         <div class="section" id="home">
             <div class="container">
               <div class="home">
+              <script src="js/typerwriter.js"></script>
                 <div class="home1">
-                  <h2>Welcome to My world!</h2>
+                  
+                  <div class="Code">
+                    <h2>$  </h2> 
+                    <div class="typewriter">
+                      <h2 id="typewriter"></h2>
+                    </div>
+                  </div>
+
                 </div>
 
                 <div class="home2">
